--- a/package.json
+++ b/package.json
@@ -21,5 +21,20 @@
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
+  },
+  "postcss": {
+    "plugins": {
+      "tailwindcss": {},
+      "autoprefixer": {}
+    }
+  },
+  "prettier": {
+    "arrowParens": "always",
+    "tabWidth": 2,
+    "singleQuote": true,
+    "trailingComma": "es5",
+    "endOfLine": "auto",
+    "useTabs": false,
+    "semi": true
   }
 }
