--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "nextjs-template",
-  "version": "0.1.0",
+  "version": "0.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "spell": "cspell \"*\""
   },
   "dependencies": {
     "@types/node": "20.1.0",
@@ -20,7 +21,9 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "@cspell/dict-pt-br": "^2.1.4",
+    "cspell": "^6.31.1"
   },
   "postcss": {
     "plugins": {
@@ -36,5 +39,23 @@
     "endOfLine": "auto",
     "useTabs": false,
     "semi": true
+  },
+  "cspell": {
+    "import": [
+      "@cspell/dict-pt-br/cspell-ext.json"
+    ],
+    "language": "en,pt,pt_BR",
+    "ignorePaths": [
+      "node_modules",
+      "dist",
+      "public",
+      "pnpm-lock.yaml"
+    ],
+    "words": [
+      "nextjs",
+      "tailwindcss",
+      "Parens",
+      "esnext"
+    ]
   }
 }
