--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "spell": "cspell *",
-    "format": "prettier --write . --ignore-path .gitignore"
+    "format": "prettier --write . --ignore-path .gitignore",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@cspell/dict-pt-br": "^2.1.4",
@@ -19,8 +20,10 @@
     "cspell": "^6.31.1",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.1",
+    "husky": "^8.0.3",
     "next": "13.4.1",
     "postcss": "8.4.23",
+    "prettier": "2.8.8",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2",
@@ -41,6 +44,15 @@
     "useTabs": false,
     "semi": true
   },
+  "commitlint": {
+    "extends": [
+      "@commitlint/config-conventional"
+    ]
+  },
+  "lint-staged": {
+    "./**/*.*": "prettier --write",
+    "./**/*.{js,jsx,ts,tsx}": "eslint --fix"
+  },
   "cspell": {
     "import": [
       "@cspell/dict-pt-br/cspell-ext.json"
@@ -60,7 +72,8 @@
     ]
   },
   "devDependencies": {
-    "husky": "^8.0.3",
-    "prettier": "2.8.8"
+    "@commitlint/cli": "^17.6.3",
+    "@commitlint/config-conventional": "^17.6.3",
+    "lint-staged": "^13.2.2"
   }
 }
