--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "@commitlint/cli": "^17.6.3",
+    "@commitlint/config-conventional": "^17.6.3",
+    "lint-staged": "^13.2.2"
   },
   "postcss": {
     "plugins": {
@@ -50,7 +53,10 @@
     ]
   },
   "lint-staged": {
-    "./**/*.*": "prettier --write",
+    "./**/*.*": [
+      "prettier --write",
+      "cspell"
+    ],
     "./**/*.{js,jsx,ts,tsx}": "eslint --fix"
   },
   "cspell": {
@@ -68,12 +74,8 @@
       "nextjs",
       "tailwindcss",
       "Parens",
-      "esnext"
+      "esnext",
+      "commitlint"
     ]
-  },
-  "devDependencies": {
-    "@commitlint/cli": "^17.6.3",
-    "@commitlint/config-conventional": "^17.6.3",
-    "lint-staged": "^13.2.2"
   }
 }
