--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
   "lint-staged": {
     "./**/*.*": [
       "prettier --write",
-      "cspell"
+      "cspell --no-require-configuration"
     ],
     "./**/*.{js,jsx,ts,tsx}": "eslint --fix"
   },
