--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,13 +1,16 @@
 {
-  "editor.codeActionsOnSave": [
-    "source.addMissingImports",
-    "source.fixAll",
-    "source.organizeImports"
-  ],
-  "editor.defaultFormatter": "esbenp.prettier-vscode",
-  "eslint.packageManager": "pnpm",
-  "files.exclude": {
-    ".next": true
-  },
-  "editor.formatOnSave": true
+    "editor.codeActionsOnSave": [
+        "source.addMissingImports",
+        "source.fixAll",
+        "source.organizeImports"
+    ],
+    "editor.defaultFormatter": "esbenp.prettier-vscode",
+    "eslint.packageManager": "npm",
+    "files.exclude": {
+        ".nyc_output": true
+    },
+    "editor.formatOnSave": true,
+    "[javascript]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
+    }
 }
