--- a/package.json
+++ b/package.json
@@ -1,90 +1,142 @@
 {
-  "name": "nextjs-template",
-  "version": "0.0.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "spell": "cspell *",
-    "format": "prettier --write . --ignore-path .gitignore",
-    "prepare": "husky install"
-  },
-  "dependencies": {
-    "@commitlint/cli": "^17.6.3",
-    "@commitlint/config-conventional": "^17.6.3",
-    "@cspell/dict-pt-br": "^2.1.4",
-    "@types/node": "20.1.0",
-    "@types/react": "18.2.6",
-    "@types/react-dom": "18.2.4",
-    "@typescript-eslint/eslint-plugin": "^5.59.2",
-    "@typescript-eslint/parser": "^5.59.2",
-    "autoprefixer": "10.4.14",
-    "cspell": "^6.31.1",
-    "eslint": "8.40.0",
-    "eslint-config-next": "13.4.1",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-cypress": "^2.13.3",
-    "eslint-plugin-react": "^7.32.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-tailwindcss": "^3.11.0",
-    "husky": "^8.0.3",
-    "lint-staged": "^13.2.2",
-    "next": "13.4.1",
-    "postcss": "8.4.23",
-    "prettier": "2.8.8",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "tailwindcss": "3.3.2",
-    "typescript": "5.0.4"
-  },
-  "postcss": {
-    "plugins": {
-      "tailwindcss": {},
-      "autoprefixer": {}
+    "name": "blip-extension-template",
+    "private": true,
+    "version": "0.0.0",
+    "scripts": {
+        "start": "react-scripts -r @cypress/instrument-cra start",
+        "build": "react-scripts build",
+        "eject": "react-scripts eject",
+        "dev": "npm run start",
+        "format": "prettier --write . --ignore-path .gitignore",
+        "lint": "eslint .",
+        "lint:fix": "eslint . --fix",
+        "spell": "cspell lint .",
+        "prepare": "husky install",
+        "cypress": "cypress open --component",
+        "test": "npm run test:cypress",
+        "test:cypress": "cypress run --component",
+        "test:coverage": "npm run test",
+        "test:result": "nyc report --reporter=text && nyc report --reporter=text-summary"
+    },
+    "dependencies": {
+        "@fontsource/nunito-sans": "^4.5.10",
+        "blip-ds": "^1.246.2",
+        "i18next": "^22.4.11",
+        "iframe-message-proxy": "^1.2.0",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-i18next": "^12.2.0",
+        "react-router-dom": "^6.9.0"
+    },
+    "devDependencies": {
+        "@commitlint/cli": "^17.4.4",
+        "@commitlint/config-conventional": "^17.4.4",
+        "@cspell/dict-es-es": "^2.2.4",
+        "@cspell/dict-pt-br": "^2.1.4",
+        "@cypress/code-coverage": "^3.10.4",
+        "@cypress/instrument-cra": "^1.4.0",
+        "@types/node": "^20.1.1",
+        "@types/react": "^18.0.27",
+        "@types/react-dom": "^18.0.10",
+        "@typescript-eslint/eslint-plugin": "^5.54.1",
+        "@typescript-eslint/parser": "^5.54.1",
+        "autoprefixer": "^10.4.14",
+        "cspell": "^6.29.3",
+        "cypress": "^12.9.0",
+        "eslint": "^8.36.0",
+        "eslint-config-prettier": "^8.7.0",
+        "eslint-plugin-cypress": "^2.13.2",
+        "eslint-plugin-react": "^7.32.2",
+        "eslint-plugin-react-hooks": "^4.6.0",
+        "eslint-plugin-tailwindcss": "^3.10.1",
+        "husky": "^8.0.3",
+        "lint-staged": "^13.2.0",
+        "postcss": "^8.4.21",
+        "prettier": "2.8.4",
+        "react-scripts": "^5.0.1",
+        "tailwind-blip-ds": "^1.0.4",
+        "tailwindcss": "^3.2.7",
+        "typescript": "^4.9.5"
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
+    "postcss": {
+        "plugins": {
+            "tailwindcss": {},
+            "autoprefixer": {}
+        }
+    },
+    "prettier": {
+        "singleQuote": true,
+        "trailingComma": "es5",
+        "endOfLine": "auto",
+        "tabWidth": 4,
+        "useTabs": false,
+        "semi": true
+    },
+    "commitlint": {
+        "extends": [
+            "@commitlint/config-conventional"
+        ]
+    },
+    "lint-staged": {
+        "./src/**/*.*": "prettier --write",
+        "./src/**/*.{js,jsx,ts,tsx}": "eslint --fix"
+    },
+    "nyc": {
+        "all": true,
+        "include": [
+            "src/**/*.{js,jsx,ts,tsx}"
+        ],
+        "exclude": [
+            "cypress/**/*.*",
+            "**/*.d.ts",
+            "**/*.cy.tsx",
+            "**/*.cy.ts"
+        ]
+    },
+    "cspell": {
+        "import": [
+            "@cspell/dict-pt-br/cspell-ext.json",
+            "@cspell/dict-es-es/cspell-ext.json"
+        ],
+        "language": "en,es,pt,pt_BR",
+        "ignorePaths": [
+            "node_modules",
+            "build",
+            ".vscode",
+            "coverage",
+            "azure-pipelines.yml",
+            "public"
+        ],
+        "words": [
+            "appsettings",
+            "commitlint",
+            "datetime",
+            "degit",
+            "firefox",
+            "fontsource",
+            "Fontsource",
+            "Heloi",
+            "heloineto",
+            "iframe",
+            "lcov",
+            "Neto",
+            "nunito",
+            "Nunito",
+            "prestart",
+            "tailwindcss",
+            "takenet"
+        ]
     }
-  },
-  "prettier": {
-    "arrowParens": "always",
-    "tabWidth": 2,
-    "singleQuote": true,
-    "trailingComma": "es5",
-    "endOfLine": "auto",
-    "useTabs": false,
-    "semi": true
-  },
-  "commitlint": {
-    "extends": [
-      "@commitlint/config-conventional"
-    ]
-  },
-  "lint-staged": {
-    "./**/*.*": [
-      "prettier --write",
-      "cspell --no-require-configuration"
-    ],
-    "./**/*.{js,jsx,ts,tsx}": "eslint --fix"
-  },
-  "cspell": {
-    "import": [
-      "@cspell/dict-pt-br/cspell-ext.json"
-    ],
-    "language": "en,pt,pt_BR",
-    "ignorePaths": [
-      "node_modules",
-      "dist",
-      "public",
-      "pnpm-lock.yaml",
-      ".vscode"
-    ],
-    "words": [
-      "classname",
-      "commitlint",
-      "esnext",
-      "nextjs",
-      "parens",
-      "tailwindcss"
-    ]
-  }
 }
