--- a/package.json
+++ b/package.json
@@ -1,22 +1,33 @@
 {
-  "name": "nextjs-template",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@types/node": "20.3.1",
-    "@types/react": "18.2.13",
-    "@types/react-dom": "18.2.6",
-    "eslint": "8.43.0",
-    "eslint-config-next": "13.4.7",
-    "next": "13.4.7",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "typescript": "5.1.3"
-  }
+    "name": "nextjs-template",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint",
+        "format": "prettier --write . --ignore-path .gitignore"
+    },
+    "dependencies": {
+        "@types/node": "20.3.1",
+        "@types/react": "18.2.13",
+        "@types/react-dom": "18.2.6",
+        "eslint": "8.43.0",
+        "eslint-config-next": "13.4.7",
+        "eslint-config-prettier": "^8.8.0",
+        "next": "13.4.7",
+        "prettier": "2.8.8",
+        "react": "18.2.0",
+        "react-dom": "18.2.0",
+        "typescript": "5.1.3"
+    },
+    "prettier": {
+        "singleQuote": true,
+        "trailingComma": "es5",
+        "endOfLine": "auto",
+        "tabWidth": 4,
+        "useTabs": false,
+        "semi": true
+    }
 }
