--- a/package.json
+++ b/package.json
@@ -7,20 +7,25 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "format": "prettier --write . --ignore-path .gitignore"
+    "format": "prettier --write . --ignore-path .gitignore",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@types/node": "20.3.1",
     "@types/react": "18.2.13",
     "@types/react-dom": "18.2.6",
+    "@typescript-eslint/eslint-plugin": "^5.60.0",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
     "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-cypress": "^2.13.3",
+    "lint-staged": "^13.2.2",
     "next": "13.4.7",
     "prettier": "2.8.8",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "5.1.3"
+    "typescript": "5.1.3",
+    "husky": "^8.0.0"
   },
   "prettier": {
     "singleQuote": true,
@@ -29,5 +34,9 @@
     "tabWidth": 2,
     "useTabs": false,
     "semi": true
+  },
+  "lint-staged": {
+    "{app,components}/**/*.*": "prettier --write",
+    "{app,components}/**/*.{js,jsx,ts,tsx}": "eslint --fix"
   }
 }
