--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@commitlint/cli": "^17.6.5",
+    "@commitlint/config-conventional": "^17.6.5",
     "@types/node": "20.3.1",
     "@types/react": "18.2.13",
     "@types/react-dom": "18.2.6",
@@ -19,13 +21,13 @@
     "eslint-config-next": "13.4.7",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-cypress": "^2.13.3",
+    "husky": "^8.0.0",
     "lint-staged": "^13.2.2",
     "next": "13.4.7",
     "prettier": "2.8.8",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "5.1.3",
-    "husky": "^8.0.0"
+    "typescript": "5.1.3"
   },
   "prettier": {
     "singleQuote": true,
@@ -38,5 +40,10 @@
   "lint-staged": {
     "{app,components}/**/*.*": "prettier --write",
     "{app,components}/**/*.{js,jsx,ts,tsx}": "eslint --fix"
+  },
+  "commitlint": {
+    "extends": [
+      "@commitlint/config-conventional"
+    ]
   }
 }
