--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nextjs-template",
-  "version": "0.1.0",
+  "version": "0.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -9,15 +9,19 @@
     "lint": "next lint",
     "format": "prettier --write . --ignore-path .gitignore",
     "prepare": "husky install",
-    "cypress": "cypress open"
+    "cypress": "cypress open",
+    "spell": "cspell lint ."
   },
   "dependencies": {
     "@commitlint/cli": "^17.6.5",
     "@commitlint/config-conventional": "^17.6.5",
+    "@cspell/dict-es-es": "^2.2.5",
+    "@cspell/dict-pt-br": "^2.1.4",
     "@types/node": "20.3.1",
     "@types/react": "18.2.13",
     "@types/react-dom": "18.2.6",
     "@typescript-eslint/eslint-plugin": "^5.60.0",
+    "cspell": "^6.31.1",
     "cypress": "^12.15.0",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
@@ -46,6 +50,29 @@
   "commitlint": {
     "extends": [
       "@commitlint/config-conventional"
+    ]
+  },
+  "cspell": {
+    "import": [
+      "@cspell/dict-pt-br/cspell-ext.json",
+      "@cspell/dict-es-es/cspell-ext.json"
+    ],
+    "language": "en,es,pt,pt_BR",
+    "ignorePaths": [
+      "node_modules",
+      "build",
+      ".vscode",
+      "coverage",
+      "public",
+      "pnpm-lock.yaml",
+      "tsconfig.tsbuildinfo"
+    ],
+    "words": [
+      "commitlint",
+      "esnext",
+      "Mantine",
+      "nextjs",
+      "tsbuildinfo"
     ]
   }
 }
